tests/snapshots/examples_fixtures/imports__import_semicolon_error.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/imports/import_semicolon_error.flx
== compile ==
failed (parse)
== diagnostics ==
error[E031]: Expected Expression

Expected expression, found `;`.

  examples/imports/import_semicolon_error.flx:5:20
  |
5 | import Modules.Math;
  |                    ^
== stdout ==
<not executed>
